Update 13.10 Ordnerstruktur Neu

--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
-h1 {
-  text-decoration: underline;
+html{
+    font-size: 22px;
+}
+
+body{
+    background-color: darkolivegreen;
+    color: whitesmoke;
+}
+a:visited {
+    color:lightgrey;
+}
+a:hover, a:active {
+    color: #eee;
 }
