--- a/VFCard.css
+++ b/VFCard.css
@@ -1,15 +1,3 @@
-body {
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
-  font-family: sans-serif;
-  background-color: #f4f4f4;
-  display: flex;
-  justify-content: top;
-  align-items: top;
-  height: 100vh;
-}
-
 /* Schriften */
 @font-face {
   font-family: Vodafone;
@@ -47,20 +35,109 @@ body {
   font-display: swap;
 }
 
-/*  Produktcard */
-.GigaTvCard {
-  width: 540px;
-  height: 680px;
-  background-color: white;
-  color: black;
-  padding: 20px;
-  border-radius: 10px;
+* {
+  font-family: Vodafone, sans-serif;
 }
 
-.GigaTvVorteile {
-  font-size: 18px;
-  line-height: normal;
+body {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  gap: 16px;
+  background-color: #f4f4f4;
+  align-items: top;
+  height: 100vh;
 }
-.Price {
+
+/*  GigaTV Card */
+.whiteCard {
+  width: 50%;
+  min-width: 530px;
+  height: min-content;
+  background: white;
+  margin-top: 5px;
+  padding: 20px;
+  border: black;
+  border-radius: 6px;
+  box-shadow: 0 0 10px rgb(187, 187, 187);
+}
+
+.imageWindow {
+  height: 280px;
+  overflow: hidden;
+  border-radius: 4px;
+}
+
+.cardImage {
+  width: 100%;
+  margin-top: 0;
+  border-radius: 6px;
+}
+
+.headlineCard {
+  margin-bottom: 12px;
+  font-size: 28px;
+  width: max-content;
+  white-space: nowrap;
+}
+
+.cardContent {
+  margin-left: 20px;
+  margin-top: 20px;
+  padding: 0;
+  font-size: 18px;
+  line-height: 35px;
+}
+.price {
   font-size: 48px;
+  font-family: Vodafone;
+  margin: 0;
+  padding: 0;
+}
+.euro {
+  font-size: 30px;
+  margin: 0;
+}
+.priceDesk {
+  font-size: 20px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+a {
+  color: #e60000;
+  text-decoration: none;
+}
+
+/* Second Variant ProductCard */
+.buttonCard {
+  width: 50%;
+  height: fit-content;
+  min-width: 530px;
+  background: white;
+  margin-top: 5px;
+  padding: 20px;
+  border: black;
+  border-radius: 6px;
+  box-shadow: 0 0 10px rgb(187, 187, 187);
+}
+.imageWindow2 {
+  height: 280px;
+  overflow: hidden;
+  border-radius: 4px;
+}
+.cardImage2 {
+  width: fit-content%;
+  margin-top: 0%;
+  border-radius: 6px;
+}
+
+.higlightBadge {
+  display: inline-flex;
+  align-items: start;
+  background-color: #fecb00;
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 6px 12px;
+  border-radius: 20px;
 }
