--- a/vfCard/VFCard.css
+++ b/vfCard/VFCard.css
@@ -42,7 +42,7 @@
 
 body {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: left;
   gap: 16px;
   background-color: #f4f4f4;
@@ -147,4 +147,92 @@ a {
   padding: 6px 12px;
   border-radius: 20px;
   margin-top: 10px;
+}
+.priceDesk2 {
+  font-size: 30px;
+  font-family: Vodafone, sans-serif;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.euro2 {
+  font-size: 36px;
+  margin: 0;
+}
+
+/* Third Variant ProductCard */
+.promoCard {
+  display: flex;
+  flex-direction: row-reverse;
+  width: 50%;
+  min-width: 530px;
+  height: min-content;
+  background: white;
+  margin-top: 5px;
+  padding: 20px;
+  border: black;
+  border-radius: 6px;
+  box-shadow: 0 0 10px rgb(187, 187, 187);
+}
+.imageWindow3 {
+  height: 280px;
+  overflow: hidden;
+  border-radius: 4px;
+}
+.cardImage3 {
+  width: 40%;
+  height: 50%;
+  margin-top: 0;
+  border-radius: 6px;
+}
+.iPhone17 img {
+  width: 100%;
+  border-radius: 4px;
+}
+
+.higlightBadge {
+  display: inline-flex;
+  align-items: start;
+  background-color: #fecb00;
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 6px 12px;
+  border-radius: 20px;
+  margin-top: 10px;
+}
+.priceDesk3 {
+  font-size: 30px;
+  font-family: Vodafone, sans-serif;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.euro3 {
+  font-size: 36px;
+  margin: 0;
+}
+
+/* Fourth Variant of ProductCard */
+.promoCard2 {
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  min-width: 530px;
+  height: min-content;
+  background: white;
+  margin-top: 5px;
+  padding: 20px;
+  border: black;
+  border-radius: 6px;
+  box-shadow: 0 0 10px rgb(187, 187, 187);
+}
+.imageWindo4 {
+  height: 280px;
+  overflow: hidden;
+  border-radius: 4px;
+}
+.cardImage4 {
+  width: 40%;
+  height: 50%;
+  margin-top: 0;
+  border-radius: 6px;
 }
